# protean

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  Jamroot.jam  README.md  SConstruct  appveyor.yml  build.sh  user-config.jam.example
bindings/clr/: AssemblyInfo.cpp  BinaryMode.hpp  BinaryReader.cpp  BinaryReader.hpp  BinaryStream.cpp  BinaryStream.hpp  BinaryWriter.cpp  BinaryWriter.hpp  ExceptionInfo.cpp  ExceptionInfo.hpp  IVariantObject.hpp  StringTranslator.hpp  StrongReference.hpp  TextReader.cpp  TextReader.hpp  TextWriter.cpp  TextWriter.hpp  Variant.cpp  Variant.hpp  VariantEnumerator.cpp  VariantEnumerator.hpp  VariantException.cpp  VariantException.hpp  VariantItem.cpp  VariantItem.hpp  VariantObjectProxy.cpp  VariantObjectProxy.hpp  XMLConst.hpp  XMLMode.hpp  XMLReader.cpp  XMLReader.hpp  XMLWriter.cpp  XMLWriter.hpp  protean.sln  protean.vcproj  vc9-protean-clr.vcproj
bindings/cs/: AssemblyInfo.cs  BinaryConstants.cs  BinaryMode.cs  BinaryReader.cs  BinaryWriter.cs  ExceptionInfo.cs  IVariantObject.cs  IVariantObjectFactory.cs  TypedArray.cs  Variant.cs  VariantBase.cs  VariantCollection.cs  VariantDataTable.cs  VariantEnumerator.cs  VariantException.cs  VariantExceptionInfo.cs  VariantItem.cs  VariantObjectBase.cs  VariantObjectData.cs  VariantObjectProxy.cs  VariantPrimitive.cs  XMLDefaultParser.cs  XMLMode.cs  XMLParserBase.cs  XMLReader.cs  XMLWriter.cs  XmlDefaultParser.cs  XmlMode.cs  XmlParserBase.cs  XmlReader.cs  XmlReaderValidationFlags.cs  XmlWriter.cs
bindings/python/: pyprotean.py
demo/: demo.sh  readme-standalone.txt  readme-tarball.txt
doc/visualisers/: Protean.natvis  ProteanVisualiser.vsix  protean_variant_msvc.vis.txt  readme.txt
projects/: vc10-protean.sln  vc1x-protean.sln  vc9-protean.sln
projects/vc10/: vc10-compiler-debug.props  vc10-compiler-release.props  vc10-compiler.props  vc10-paths.props  vc10-protean-clr.vcxproj  vc10-protean-clr.vcxproj.filters  vc10-protean.net.csproj  vc10-protean.props  vc10-protean.vcxproj  vc10-protean.vcxproj.filters  vc10-test-protean-clr.csproj  vc10-test-protean.net .csproj  vc10-test-protean.net.csproj  vc10-test-protean.props  vc10-test-protean.vcxproj  vc10-version.props  vc10-x86_64.props
projects/vc1x/: packages.config  vc1-configuration-processor.props  vc100-toolset.props  vc110-toolset.props  vc120-toolset.props  vc140-toolset.props  vc141-toolset.props  vc142-toolset.props  vc1x-compiler-debug.props  vc1x-compiler-release.props  vc1x-compiler.props  vc1x-configuration-processor.props  vc1x-linker.props  vc1x-output-dynamic.props  vc1x-output-static.props  vc1x-paths.props  vc1x-paths.props.template  vc1x-protean-clr.vcxproj.filters  vc1x-protean.net.csproj  vc1x-protean.net.nuspec  vc1x-protean.vcxproj  vc1x-protean.vcxproj.filters  vc1x-test-protean.net.csproj  vc1x-test-protean.vcxproj  (+5 more)
protean/: array_iterator.hpp  array_iterator.ipp  binary_common.hpp  binary_defs.hpp  binary_reader.hpp  binary_writer.hpp  config.hpp  data_table_column_base.hpp  data_table_column_base.ipp  data_table_iterator.hpp  exception_data.hpp  exception_info.hpp  handle.hpp  handle.ipp  object.hpp  object_factory.hpp  object_handle.hpp  object_proxy.hpp  typed_array.hpp  variant.hpp  variant.ipp  variant_base.hpp  variant_error.hpp  variant_iterator.hpp  variant_ref.hpp  variant_ref.ipp  version.hpp  xml_common.hpp  xml_defs.hpp  xml_parser.hpp  xml_reader.hpp  xml_writer.hpp
src/: array_iterator.cpp  bag.cpp  base64.cpp  binary_reader.cpp  binary_writer.cpp  buffer.cpp  data_table.cpp  dictionary.cpp  exception_data.cpp  exception_info.cpp  hash.cpp  list.cpp  object.cpp  object_factory.cpp  object_handle.cpp  object_proxy.cpp  string.cpp  timeseries.cpp  tuple.cpp  typed_array.cpp  variant.cpp  variant_base.cpp  variant_iterator.cpp  variant_ref.cpp  xml_common.cpp  xml_default_handler.cpp  xml_handler_base.cpp  xml_parser.cpp  xml_preserve_handler.cpp  xml_reader.cpp  xml_utility.cpp  xml_writer.cpp  xml_writer_impl.cpp
test/: array.cpp  basic_types.cpp  binary_streams.cpp  iterator.cpp  list.cpp  number.cpp  object.cpp  string.cpp  test_array.cpp  test_string.cpp  test_xml_streams.cpp  trivial.cpp  types.cpp  variant_ref.cpp  xml_streams.cpp
(+156 files in other folders)
